--- a/codeu-final/war/resources/search_result.css
+++ b/codeu-final/war/resources/search_result.css
@@ -1,2 +1,12 @@
+body{
+	background-image: url("Globe.jpg");
+}
 
+ol{
+	font-family: "Arial Black", Gadget, sans-serif;
+	color: #FFFFFF;
+}
 
+a{
+	color: #FFFFFF
+}
